alpm-srcinfo/tests/parse_errors/invalid_architecture.srcinfo
pkgbase = test
	pkgver = 1.0.0
	pkgrel = 1
	arch = my_special_arch

# Missing pkgname section.
